--- a/compose.yaml
+++ b/compose.yaml
@@ -2,8 +2,19 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - 'POSTGRES_DB=forum'
+      - 'POSTGRES_USER=forum_user'
+      - 'POSTGRES_PASSWORD=forum_password'
     ports:
-      - '5432'
+      - "5432:5432"
+    volumes:
+      - postgres_forum_data:/var/lib/postgresql/data
+    networks:
+      - forum-net
+
+volumes:
+  postgres_forum_data:
+    driver: local
+
+networks:
+  forum-net:
