--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,26 @@
 spring:
   application:
     name: Forum Back-end
+
+datasource:
+  url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/forum}
+  username: ${DATABASE_USER:forum_user}
+  password: ${DATABASE_PASSWORD:forum_password}
+  driver-class-name: org.postgresql.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: validate
+    show-sql: ${SHOW_SQL:true}
+    properties:
+      hibernate:
+        format_sql: true
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+
+  docker:
+    compose:
+      file: compose.yaml
