--- a/.github/workflows/pull_request_workflow.yaml
+++ b/.github/workflows/pull_request_workflow.yaml
@@ -7,9 +7,13 @@ on:
 
 jobs:
   push_to_registry:
-    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+    env:
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      IMAGE_NAME: forum-backend
+      IMAGE_TAG: latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -24,16 +28,14 @@ jobs:
         run: mvn clean package -DskipTests
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3.1.0
+        uses: docker/login-action@e92390c5fb421da1463c202d546fed0ec5c39f20
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker image
-        run: |
-          docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/forum-backend:latest .
+        run: docker build -f Dockerfile -t "$DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG" .
 
-      - name: Push Docker images
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/forum-backend:latest
+      - name: Push Docker image
+        run: docker push "$DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG"
 
