ci: ajusta problema de segurança

--- a/.github/workflows/pull_request_workflow.yaml
+++ b/.github/workflows/pull_request_workflow.yaml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Copy k8s manifests to VPS
-        uses: appleboy/scp-action@v0.1.7
+        uses: appleboy/scp-action@917f8b81dfc1ccd331fef9e2d61bdc6c8be94634
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USERNAME }}
@@ -63,7 +63,7 @@ jobs:
           strip_components: 1
 
       - name: Deploy to VPS via SSH
-        uses: appleboy/ssh-action@v1.0.3
+        uses: appleboy/ssh-action@029f5b4aeeeb58fdfe1410a5d17f967dacf36262
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USERNAME }}
