--- a/.github/workflows/pull_request_workflow.yaml
+++ b/.github/workflows/pull_request_workflow.yaml
@@ -13,7 +13,8 @@ jobs:
     env:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       IMAGE_NAME: forum-backend
-      IMAGE_TAG: latest
+    outputs:
+      app_version: ${{ steps.version.outputs.app_version }}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -24,6 +25,16 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
+      - name: Resolve app version (pom.xml)
+        id: version
+        shell: bash
+        run: |
+          VERSION="$(mvn -q -DforceStdout help:evaluate -Dexpression=project.version)"
+          # Sanitiza para tag Docker (evita espaços/linhas)
+          VERSION="$(echo "$VERSION" | tr -d '\r' | tr -d '\n' | xargs)"
+          echo "APP_VERSION=$VERSION" >> "$GITHUB_ENV"
+          echo "app_version=$VERSION" >> "$GITHUB_OUTPUT"
+
       - name: Build com Maven
         run: mvn clean package -DskipTests
 
@@ -33,11 +44,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Docker image
-        run: docker build -f Dockerfile -t "$DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG" .
+      - name: Build Docker image (versioned)
+        run: docker build -f Dockerfile -t "$DOCKER_USERNAME/$IMAGE_NAME:$APP_VERSION" .
 
-      - name: Push Docker image
-        run: docker push "$DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG"
+      - name: Push Docker image (versioned)
+        run: docker push "$DOCKER_USERNAME/$IMAGE_NAME:$APP_VERSION"
+
+      - name: Tag and push latest (optional)
+        run: |
+          docker tag "$DOCKER_USERNAME/$IMAGE_NAME:$APP_VERSION" "$DOCKER_USERNAME/$IMAGE_NAME:latest"
+          docker push "$DOCKER_USERNAME/$IMAGE_NAME:latest"
 
   deploy_to_vps:
     needs: push_to_registry
@@ -46,7 +62,7 @@ jobs:
     env:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       IMAGE_NAME: forum-backend
-      IMAGE_TAG: latest
+      APP_VERSION: ${{ needs.push_to_registry.outputs.app_version }}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -69,29 +85,25 @@ jobs:
           username: ${{ secrets.VPS_USERNAME }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT }}
+          envs: DOCKER_USERNAME,IMAGE_NAME,APP_VERSION
           script: |
-            # Criar namespace se não existir
-            kubectl get namespace forum || kubectl create namespace forum
-            
-            # Aplicar secrets
+            set -e
+
+            kubectl get namespace forum >/dev/null 2>&1 || kubectl create namespace forum
+
             kubectl apply -f ~/forum-k8s/secrets/db-credentials.yml
-            
-            # Aplicar manifests do PostgreSQL
+
             kubectl apply -f ~/forum-k8s/postgres/postgres-pvc.yml
             kubectl apply -f ~/forum-k8s/postgres/postgres-deployment.yml
             kubectl apply -f ~/forum-k8s/postgres/postgres-service.yml
-            
-            # Aguardar PostgreSQL estar pronto
+
             kubectl wait --for=condition=ready pod -l app=postgres -n forum --timeout=120s
-            
-            # Aplicar manifests da aplicação
+
             kubectl apply -f ~/forum-k8s/app/app-deployment.yml
             kubectl apply -f ~/forum-k8s/app/app-service.yml
             kubectl apply -f ~/forum-k8s/app/app-ingressroute.yml
-            
-            # Forçar o rollout para puxar a nova imagem
-            kubectl rollout restart deployment/forum-app-deployment -n forum
-            
-            # Aguardar o deploy completar
-            kubectl rollout status deployment/forum-app-deployment -n forum --timeout=300s
 
+            kubectl set image deployment/forum-app-deployment forum-app="$DOCKER_USERNAME/$IMAGE_NAME:$APP_VERSION" -n forum
+
+            kubectl rollout status deployment/forum-app-deployment -n forum --timeout=300s
+      
