--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.ferraz</groupId>
 	<artifactId>forum-backend</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<name>Forum Back-end</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
