--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,7 @@ spring:
   docker:
     compose:
       file: compose.yaml
+
+cors:
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:4200,https://ff.lucasferraz.cloud}
+
