--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     username: ${DATABASE_USER:forum_user}
     password: ${DATABASE_PASSWORD:forum_password}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 3000  # ms
 
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
