--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,15 @@ spring:
     compose:
       file: compose.yaml
 
+  devtools:
+    restart:
+      poll-interval: 2000
+      quiet-period: 1000
+
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
+
 cors:
   allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:4200,https://ff.lucasferraz.cloud}
 
