--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.ferraz</groupId>
 	<artifactId>forum-backend</artifactId>
-	<version>1.0.4</version>
+	<version>1.0.5</version>
 	<name>Forum Back-end</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -142,6 +142,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>build-info</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<excludes>
 						<exclude>
