--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
 	<properties>
 		<java.version>21</java.version>
 		<sonar.organization>lucasferraz95</sonar.organization>
+		<sonar.coverage.jacoco.xmlReportPaths>
+			target/site/jacoco/jacoco.xml
+		</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -176,8 +179,12 @@
 						<goals>
 							<goal>report</goal>
 						</goals>
+						<configuration>
+							<formats>
+								<format>XML</format>
+							</formats>
+						</configuration>
 					</execution>
-
 				</executions>
 			</plugin>
 			<plugin>
